1999-03-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in (CPPFLAGS): Pass -I$(top_builddir)/libobjc.

	* directory.m (compare_java_objects, compare_objc_objects): Moved
	into java_directory_init.  Use IsSameObject for former.
	(java_directory_update): Create GlobalRefs when items are added 
	to tree.
	(java_directory_switchupdate, java_directory_drop): Call DeleteRef
	when items are removed from tree.

	* directory.[hm] (java_directory_java_find, java_directory_update,
	java_directory_switchupdate, java_directory_update_java,
	java_directory_switchupdate_java): Add JNIEnv first argument.

	* directory.h (JFINDOBJC, JFINDJAVA, JUPDATE, JSWITCHUPDATE):
	Accomodate.
	
	* directory.[hm] (java_instantiate_name): Rename from java_instantiate.
	(java_instantiate): Now takes jclass as argument.

 	* directory.h (JINSTANTIATENAME, JINSTANTIATE): Likewise.

1999-03-19  Vladimir Jojic  <vjojic@wupatki.santafe.edu>

	* directory.m (create_class_refs): Create class reference
	for primitive type void.

1999-03-18  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* directory.h (JINSTANTIATE, JSWITCHUPDATE): New macros.

	* directory.[hm] (java_directory_switchupdate,
	java_directory_switchupdate_java, java_instantiate): New functions.

1999-03-18  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* directory.m (create_class_refs): Modify find to return primitive
	type class instead of the java.lang wrapper.
	
1999-03-18  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* directory.m (create_class_refs): Initialize globalZone via
	static field lookup in SwarmEnvironment class.

	* SwarmEnvironment.m: Include swarmconfig.h (for VERSION).
	(Java_swarm_SwarmEnvironment_initSwarm): 
	Renamed from Java_SwarmEnvironment_initSwarm.
	Fix off-by-one argv/argc problem. 
	Initialize argv[0] to "javaswarm".  Use initSwarmApp instead
	of initSwarm.

	* directory.m (create_class_refs): c_int is an Integer, not an Int.
