@@ -1,3 +1,7 @@
+1999-03-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* directory.m (java_ensure_selector): Handle objcFlag.
+
 1999-03-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* Makefile.in (CPPFLAGS): Pass -I$(top_builddir)/libobjc.
